features: VCS, GUI, ...

--- a/idea/features.tex
+++ b/idea/features.tex
@@ -44,14 +44,34 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Debugger}
+  \begin{itemize}
+    \item Breakpoints management (add, disable, filter, conditions)
+    \item Run to cursor
+    \item Thread management
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
   \frametitle{GUI Builder}
-  %TODO
+  \begin{itemize}
+    \item Drag-n-Drop or keyboard
+    \item Suggestions, clean code (bytecode instrumentation)
+    \item Import hand-coded UIs
+    \item Internationalization
+    \item Ant compatible
+  \end{itemize}
 \end{frame}
 
 
 \begin{frame}
   \frametitle{VCS integration}
-  %TODO
+  \begin{itemize}
+    \item Add, commit, push
+    \item Browse older version, view differences
+    \item Patches, bug tracker
+    \item GitHub integration
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
