features: correct config file for vim

--- a/idea/features.tex
+++ b/idea/features.tex
@@ -92,7 +92,7 @@
         \item Smooth integration
         \item Easy keyboard conflict resolution
         \item Kept up-to-date
-        \item Can read .vimrc
+        \item Can read .vimrc/.ideavimrc
       \end{itemize}
     \item emacsIDEAs
       \begin{itemize}
