tex: last minute corrections

--- a/idea/features.tex
+++ b/idea/features.tex
@@ -108,6 +108,7 @@
     \item Terminal inside the IDE (Windows, Maven, Git, ...)
     \item Quick class open
     \item All shortcuts and menus are customizable
+    \item Find a command (Ctrl+Shift+A)
   \end{itemize}
 \end{frame}
 
