--- a/idea/intro.tex
+++ b/idea/intro.tex
@@ -36,7 +36,7 @@
       \end{itemize}
     \item Ultimate edition
       \begin{itemize}
-        \item 89\euro for students, free for education purposes
+        \item 89\euro for students, free for educational purposes
         \item Web technologies and frameworks
         \item More analysis and refactoring tools
         \item Code coverage, and more...
