--- a/idea/slides.tex
+++ b/idea/slides.tex
@@ -43,7 +43,7 @@
 \end{frame}
 
 \begin{frame}
-  \tableofcontents[pausesections ]
+  \tableofcontents[]
 \end{frame}
 
 \input{intro.tex}
@@ -57,6 +57,7 @@
     \item Give it a try
     \item Take some time to customize it
     \item Save your settings!
+    \item Leave the tips!
     \item If you find something missing, first look for it in the menus, the
     help, or internet, then suggest it to the devs
   \end{itemize}
