--- a/idea/slides.tex
+++ b/idea/slides.tex
@@ -57,7 +57,7 @@
     \item Give it a try
     \item Take some time to customize it
     \item Save your settings!
-    \item Leave the tips!
+    \item Leave the tips on!
     \item If you find something missing, first look for it in the menus, the
     help, or internet, then suggest it to the devs
   \end{itemize}
