--- a/menhir/intro.tex
+++ b/menhir/intro.tex
@@ -15,6 +15,7 @@
     \item Developped by the INRIA
     \item Yacc $\rightarrow$ Bison $\Leftrightarrow$ ocamlyacc $\rightarrow$ Menhir
     \item Many improvements
+    \item Only LR(1)
   \end{itemize}
 \end{frame}
 
